# sound-identifier-app

./: ..gitignore.swp  .gitignore  README.md  settings.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: fingerprint.cpp  fingerprint.hpp  sha1.hpp
Android/app/src/main/res/layout/: about_layout.xml  activity_audio_record.xml  activity_list_files.xml  activity_mylibrary.xml  activity_results.xml
Android/app/src/main/res/layout-v26/: activity_results.xml
Android/app/src/main/res/menu/: menu_main.xml
Android/app/src/main/res/values/: integers.xml
Android/app/src/main/res/values-el-rGR/: strings.xml
Android/app/src/main/res/xml/: preferences.xml
Android/gradle/wrapper/: gradle-wrapper.properties
Web-App/: .gitignore  LICENSE  dejavu.LICENSE  requirements.txt  server.py
Web-App/dejavu/: __init__.py
app/: build.gradle
app/src/androidTest/java/gr/geova/soundidentifier/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: licenses.html
app/src/main/cpp/: CMakeLists.txt  fingerprint.cpp  fingerprint.hpp  sha1.cpp  sha1.hpp
app/src/main/res/layout/: activity_audio_record.xml  activity_list_files.xml  activity_settings.xml  content_main.xml
app/src/main/res/layout-v26/: activity_results.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: arrays.xml  integers.xml  strings.xml
app/src/main/res/values-el-rGR/: arrays.xml  strings.xml
app/src/main/res/xml/: preferences.xml
web-app/: requirements.txt
web-app/dejavu/: __init__.py  database_sql.py  fingerprint.py
(+34 files in other folders)
